--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -66,14 +66,14 @@
  "Could not access camera please grant permission through phone settings": "Die App konnte nicht auf die Kamera zugreifen, bitte erteilen Sie die Erlaubnis über die Telefoneinstellungen.",
 
   "Please enter your salutation":"Bitte wählen Sie die Anrede aus.",
- "You can start scanning documents by pressing the scan document button below": "Sie können das Scannen von Dokumenten starten, indem Sie auf die Schaltfläche Dokument scannen unten drücken", 
+ "You can start scanning documents by pressing the scan document button below": "Sie können das Scannen von Dokumenten starten, indem Sie auf die Schaltfläche\n Dokument scannen unten drücken", 
  "Press the show document button below to view all the pages of your document": "Drücken Sie die Schaltfläche Dokument anzeigen unten, um alle Seiten Ihres Dokuments anzuzeigen",
  "Show Document": "Dokument anzeigen",
  "You can view and edit the document by pressing here":"\nZur Anzeige und Bearbeitung des Dokuments klicken Sie bitte hier.",
  "Here you can edit the information you put in and view the pages of the document by pressing the Show Document button":"Hier können Sie die Informationen zum Dokument ändern und die einzelnen Seiten des Dokuments aufrufen durch Klick auf Dokument anzeigen",
  "How to video": "Erklärvideo",
- "Flash":"Blitzlicht",
- "document detection":"dokument erkennungs",
+ "Flash":"Blitz",
+ "document detection":"Automatische Erkennung",
  "Please wait until screen turns on before scanning":"Bitte warten Sie vor dem Scannen, bis sich der Bildschirm einschaltet"
 
 }
