fixed bugs caused by merging android and ios

--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -1,65 +1,71 @@
 {
-  "Insurance Number": "Insurance Number",
-  "Please select your sex": "Please select your sex",
+  "Insurance Number": "Policy number",
+  "Please select your sex": "Please select the salutation.",
   "Select": "Select...",
-  "Male": "Male",
-  "Female": "Female",
-  "First Name": "First Name",
+  "Mr": "Mr.",
+  "Ms": "Ms.",
+  "First Name": "First name",
   "Last name": "Last name",
   "Continue": "Continue...",
-  "Please check your insurance number": "Please check your insurance number",
-  "Please select your gender": "Please select your gender",
-  "Please enter your name": "Please enter your name",
+  "Please check your insurance number": "Please check the policy number.",
+  "Salutation": "Salutation",
+  "Please enter your name": "Please enter the name.",
 
-  "Scan Document": "Scan Document",
+  "Scan Document": "Scan document",
   "Send": "Send...",
-  "was entered incorrectly Please fix your entry and try again": "was entered incorrectly. Please fix your entry and try again",
-  "Cannot send anything before you scan some documents": "Cannot send anything before you scan some documents!",
+  "was entered incorrectly Please fix your entry and try again": "was entered incorrectly. Please correct your entry and try again.",
+  "Cannot send anything before you scan some documents": "You cannot send anything until you have scanned a document!",
 
-  "Press here for instructions": "Press here for instructions",
-  "Please enter the birthdate of the insured person": "Please enter the birthdate of the insured person:",
-  "Which type of document are you about to scan": "Which type of document are you about to scan?",
-  "Claim Document": "Claim Document",
-  "Other Document": "Other Document",
-  "Press for explanation": "Press for explanation",
+  "Press here for instructions": "Tap here for more information.",
+  "Please enter the birthdate of the insured person": "Please enter the insured person’s date of birth.",
+  "Which type of document are you about to scan": "Which type of document would you like to scan?",
+  "Claim Document": "Bill/receipt",
+  "Other Document": "Other document",
+  "Press for explanation": "Tap here for more information.",
   "Yes": "Yes",
   "No": "No",
-  "Is the document you are about to scan from Germany": "Is the document you are about to scan from Germany?",
-  "Should contractual services": "Should contractual services be reimbursed to the biller (physician/hospital, etc.)?",
-  "Please enter the full name of the account holder": "Please enter the full name of the account holder",
-  "Full Name": "Full Name",
-  "Please enter your": "Please enter your",
-  "Please make sure all fields have been selected": "Please make sure all fields have been selected",
-  "please check your bank details": "please check your bank details",
-  "Please enter a birth date": "Please enter a birth date",
-  "If you have a claim and would like to send us any relevant documents such as doctor's bills or pharmacy receipts": "If you have a claim and would like to send us any relevant documents such as doctor's bills or pharmacy receipts or if we have asked you for some information regarding a request for reimbursement (for example, a completed self-disclosure form or proof of entry into a country), you can upload all documents quickly and easily here. Your advantage: You do not need to send us anything by regular mail or email* and you will receive the benefits stipulated in your policy very quickly. *In individual cases we reserve the right to request original versions of the documents.",
-  "Doc-type info": "Claim Document: \nThese include, for example, doctor’s bills, pharmacy receipts and hospital bills\n\n  All other documents: \nThese include such documents as completed self-disclosure forms, duty of confidentiality waivers, cost estimates and proof of entry into a country.",
+  "Is the bill/receipt from Germany": "Is the bill/receipt from Germany?",
+  "Should contractual services": "Should benefits stipulated in the policy be reimbursed to the biller (physician/hospital, etc.)?",
+  "Please enter the full name of the account holder": "Please enter the full name of the account holder.",
+  "Full Name": "Full name",
+  "Please enter your IBAN":"Please enter the IBAN.",
+  "Please enter your BIC":"Please enter the BIC.",
+  "Please make sure all fields have been selected": "Please make sure all fields have been selected.",
+  "please check your bank details": "Please check your bank details.",
+  "Please enter a birth date": "Please enter a birth date.",
+  "If you have a claim and would like to send us any relevant documents such as doctor's bills or pharmacy receipts": "If you have a claim and would like to send us any relevant documents such as doctor's bills or pharmacy receipts, or if we have asked you for some information regarding a request for reimbursement (for example, a completed self-disclosure form or proof of entry into a country), you can upload all documents quickly and easily here. \nYour advantage: You do not need to send us anything by regular mail or email*, and you will receive the benefits stipulated in your policy very quickly. \n*In individual cases we reserve the right to request original versions of the documents.",
+  "Doc-type info": "Bills/receipts: \nThese include, for example, doctorâ€™s bills, pharmacy receipts and hospital bills.\n\n  All other documents: \nThese include such documents as completed self-disclosure forms, duty of confidentiality waivers, cost estimates and proof of entry into a country.",
 
   "Scan": "Scan",
-  "Scan timed out, please hold phone steady and try again": "Scan timed out, please hold phone steady and try again",
-  "Please wait while your document is being scanned": "Please wait while your document is being scanned",
-  "Add Page": "Add Page",
-  "Delete all Pages": "Delete all Pages",
+  "Scan timed out, please hold phone steady and try again": "The scanning process was interrupted. Please hold phone steady and try again.",
+  "Please wait while your document is being scanned": "Please wait while your document is being scanned. This can take some time.",
+  "Add Page": "Add page",
+  "Delete all Pages": "Delete all pages",
 
-  "Rescan": "Rescan",
+  "Rescan": "Scan again",
   "Crop": "Crop",
 
-  "This is a": "This is a",
+  "This is a": "This is a(n)",
   "with": "with",
-  "pages": "page/s",
-  "Go Back": "Go Back",
-  "Finished submitting claim, please close the app": "Finished submitting claim, please close the app",
-  "Select policy holder's sex":"Select policy holder's sex",
-  "Finished submitting claim":"Finished submitting claim",
-  "Please wait while we send your claim":"Please wait while we send your claim...",
+  "pages": "page(s)",
+  "Go Back": "Go back",
+  "Finished submitting claim, please close the app": "Thank you for uploading the documents. We will contact you shortly. \nImportant: Please do not send the documents again via email or regular mail.",
+  "Select policy holder's sex":"Select policyholder's gender.",
+  "Finished submitting claim":"Document submitted",
+  "Please wait while we send your claim":"Please wait while we send your document(s)...",
   "Set language": "Set language",
-  "Please enter a valid birth date": "Please enter a valid birth date",
-  "Press these": "Press these",
-  "icons for instructions": "icons for instructions",
+  "Please enter a valid birth date": "Please enter a valid birth date.",
+  "Press these": "Tap on these",
+  "icons for instructions": "icons to get more information",
   "Start":"Start",
   "Imprint":"Imprint",
   "Privacy":"Privacy",
-  "Please enter the information of the policy holder below":"Please enter the information of the policy holder below",
+  "Please enter the information of the policy holder below":"Please enter the information of the policyholder/contract holder below.",
+  "The contractual services shall be reimbursed to the following account": "The benefits stipulated in the policy will be reimbursed to the following account: ",
+  "Thank you for uploading the documents We will contact you shortly":"Thank you for uploading the documents. We will contact you shortly.\n Important: Please do not send the documents again via email or regular mail.",
+  "could not access camera please grant permission manually":"The camera could not be accessed. Please grant permission manually.",
+  "Could not access camera please grant permission through phone settings": "The camera could not be accessed. Please grant permission through phone settings.",
+  "Please enter your salutation":"Please enter the salutation.",
 
   "Show Document":"Show document",
   "Press the show document button below to view all the pages of your document":"Press the 'Show document' button below to view all the pages of your document.",
@@ -70,5 +76,6 @@
   "Cancel":"Cancel",
   "Flash":"Flash",
   "document detection":"Document detection",
-  "Please wait until screen turns on before scanning":"Please wait until the screen turns on before scanning."
+  "Please wait until screen turns on before scanning":"Please wait until the screen turns on before scanning.",
+  "Something went wrong, please contact support":"Something went wrong, please contact support"
 }
