--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -74,6 +74,7 @@
  "How to video": "Erklärvideo",
  "Flash":"Blitz",
  "document detection":"Automatische Erkennung",
- "Please wait until screen turns on before scanning":"Bitte warten Sie, bis sich der Bildschirm einschaltet, ehe Sie scannen."
+ "Please wait until screen turns on before scanning":"Bitte warten Sie, bis sich der Bildschirm einschaltet, ehe Sie scannen.",
+ "Something went wrong, please contact support":"Ein Problem ist aufgetreten. Bitte kontaktieren Sie den Support."
 
 }
