added how to translation and added chinese start image

--- a/src/translations/chn.json
+++ b/src/translations/chn.json
@@ -60,5 +60,6 @@
  "The contractual services shall be reimbursed to the following account":"报销的数额请打到下列账户:",
  "Thank you for uploading the documents We will contact you shortly": "谢谢您上传文档。我们会尽快联系您。\n\n重要提示: 已经上传过的单据或其它文档，请不要再邮寄或通过邮件发送。",
  "could not access camera please grant permission manually": "理赔软件无法链接到相机， 请手动设置为允许。",
- "Could not access camera please grant permission through phone settings": "理赔软件无法链接到相机， 请在手机设置上设置成允许。"
+ "Could not access camera please grant permission through phone settings": "理赔软件无法链接到相机， 请在手机设置上设置成允许。",
+ "How to video": "操作视频演示"
 }
