fixed some missing chinese translations

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -75,6 +75,7 @@
  "Flash":"Blitz",
  "document detection":"Automatische Erkennung",
  "Please wait until screen turns on before scanning":"Bitte warten Sie, bis sich der Bildschirm einschaltet, ehe Sie scannen.",
- "Something went wrong, please contact support":"Ein Problem ist aufgetreten. Bitte kontaktieren Sie den Support."
+ "Something went wrong, please contact support":"Ein Problem ist aufgetreten. Bitte kontaktieren Sie den Support.",
+ "Loading":"Laden"
 
 }
