--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -77,5 +77,6 @@
   "Flash":"Flash",
   "document detection":"Document detection",
   "Please wait until screen turns on before scanning":"Please wait until the screen turns on before scanning.",
-  "Something went wrong, please contact support":"Something went wrong, please contact support"
+  "Something went wrong, please contact support":"Something went wrong, please contact support",
+  "Loading":"Loading"
 }
