--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -76,6 +76,11 @@
  "document detection":"Automatische Erkennung",
  "Please wait until screen turns on before scanning":"Bitte warten Sie, bis sich der Bildschirm einschaltet, ehe Sie scannen.",
  "Something went wrong, please contact support":"Ein Problem ist aufgetreten. Bitte kontaktieren Sie den Support.",
- "Loading":"Laden"
+ "Loading":"Laden",
+
+ "Delte": "Löschen",
+ "Cancel":"Abbrechen",
+ "Delete Page":"Seite löschen",
+ "Would you like to delete the selected page": "Möchten Sie die ausgewählte Seite löschen?"
 
 }
