--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -76,5 +76,11 @@
   "Cancel":"Cancel",
   "Flash":"Flash",
   "document detection":"Document detection",
-  "Please wait until screen turns on before scanning":"Please wait until the screen turns on before scanning."
+  "Please wait until screen turns on before scanning":"Please wait until the screen turns on before scanning.",
+  "Something went wrong, please contact support":"Something went wrong, please contact support",
+  "Loading":"Loading",
+
+  "Delete Page":"Delete Page",
+  "Would you like to delete the selected page":"Would you like to delete the selected page?",
+  "Delete":"Delete"
 }
