--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -81,6 +81,7 @@
  "Delte": "Löschen",
  "Cancel":"Abbrechen",
  "Delete Page":"Seite löschen",
- "Would you like to delete the selected page": "Möchten Sie die ausgewählte Seite löschen?"
+ "Would you like to delete the selected page": "Möchten Sie die ausgewählte Seite löschen?",
+ "Confirm":"Ok"
 
 }
