added translations, fixed issue with editing existing document (navigation to scanner

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -78,7 +78,7 @@
  "Something went wrong, please contact support":"Ein Problem ist aufgetreten. Bitte kontaktieren Sie den Support.",
  "Loading":"Laden",
 
- "Delte": "Löschen",
+ "Delete": "Löschen",
  "Cancel":"Abbrechen",
  "Delete Page":"Seite löschen",
  "Would you like to delete the selected page": "Möchten Sie die ausgewählte Seite löschen?",
