now checks for non utf8 characters on account holder

--- a/src/translations/De.json
+++ b/src/translations/De.json
@@ -81,6 +81,7 @@
  "Delete": "Löschen",
  "Cancel":"Abbrechen",
  "Delete Page":"Seite löschen",
- "Would you like to delete the selected page": "Möchten Sie die ausgewählte Seite löschen?"
+ "Would you like to delete the selected page": "Möchten Sie die ausgewählte Seite löschen?",
+ "Name must only include latin characters": "Bitte geben Sie hier nur lateinische Buchstaben ein."
 
 }
