--- a/src/translations/chn.json
+++ b/src/translations/chn.json
@@ -72,5 +72,6 @@
 "Delete Page": "删除这页",
 "Delete":"删除",
 "Cancel":"终止",
-"Would you like to delete the selected page":"是要删除所选择这一页吗"
+"Would you like to delete the selected page":"是要删除所选择这一页吗",
+"Here you can edit the information you put in and view the pages of the document by pressing the Show Document button":"若需更改讯息，或从新浏览上传的文件，请按 „显示文件"
 }
