--- a/src/translations/eng.json
+++ b/src/translations/eng.json
@@ -83,5 +83,7 @@
   "Delete Page":"Delete Page",
   "Would you like to delete the selected page":"Would you like to delete the selected page?",
   "Delete":"Delete",
-  "Confirm":"Confirm"
+  "Confirm":"Confirm",
+  "Name must only include latin characters":"Name must only include latin characters",
+  
 }
